--- a/juan dealer/html.html
+++ b/juan dealer/html.html
@@ -11,53 +11,53 @@
     <header style="width: 1920px;height: 875px; background-color: rgba(26, 26, 26, 1);">
         <div style="display: flex; flex-direction: row;">
              <img src="img/Frame 38.png" alt="" style="margin-left: 86px;width: 171px;height: 32px; margin-top: 34px;">
-             <div style="margin-left: 1133px; display: flex;gap: 40px; align-items: center;margin-top: 25px;" class="div-1">
+             <div style="margin-left: 1133px; display: flex;gap: 40px; align-items: center;margin-top: 25px;" class="pos1">
            <a href=""><ul>Work</ul></a>
              <a href=""><ul>Service</ul></a>
              <a href=""><ul>Testimonial</ul></a>
-             <a href="" class="butt-1">Contact</a>
+             <a href="" class="button-1">Contact</a>
              </div>
         </div>
-        <div class="div-2">
-            <ul>Hi,<img src="img/Frame 4.jpg" alt="" class="img"> I’m <span class="span">Juan Website Designer </span>Based in Jakarta</ul>
+        <div class="pos2">
+            <ul>Hi,<img src="img/Frame 4.jpg" alt="" class="img"> I’m <span class="xui">Juan Website Designer </span>Based in Jakarta</ul>
         </div>
-        <div class="butt-2">
+        <div class="button-2">
           <a href="" >Hire Me</a>
           </div>
     </header>
     <main >
         <div style=" background-color: rgba(35, 35, 35, 1); width: 1920px;height: 1628px;padding-left: 100px;">
         <div style="display: flex;">
-        <ul class="Work">Work</ul>
-        <a href="" class="View">View All</a>
+        <ul class="temki">Work</ul>
+        <a href="" class="smotret">View All</a>
         </div>
         <div style="display: flex; margin-top: 74px;">
             <div>
             <img src="img/Frame 22.png" alt="">
-            <uL class="pro">Project</uL>
-            <ul class="mob">Mobile App</ul>
+            <uL class="propiska">Project</uL>
+            <ul class="moodak">Mobile App</ul>
             </div>
             <div style="margin-left: 31px;">
             <img src="img/Frame 34.png" alt="">
-               <uL class="pro">Project</uL>
-            <ul class="mob">Mobile App</ul>
+               <uL class="propiska">Project</uL>
+            <ul class="moodak">Mobile App</ul>
             </div>
             </div>
             <div style="display: flex;margin-top: 64px;">
                     <div>
                         <img src="img/Frame 35.png" alt="">
-                         <uL class="pro">Project</uL>
-                        <ul class="mob">Mobile App</ul>
+                         <uL class="propiska">Project</uL>
+                        <ul class="moodak">Mobile App</ul>
                     </div>
                     <div style="margin-left: 31px;">
                         <img src="img/Hand - Iphone 013 1.png" alt="">
-                        <uL class="pro">Project</uL>
-                        <ul class="mob">Mobile App</ul>
+                        <uL class="propiska">Project</uL>
+                        <ul class="moodak">Mobile App</ul>
                     </div>
                 </div>
             </div>
             <div style="width: 1920px;height: 1404px;background-color: rgba(26, 26, 26, 1); display: flex;">
-                <uL class="Service">Services</uL>
+                <uL class="servici">Services</uL>
                 <div style="display: flex;gap: 36px; flex-direction: column; margin-left: 209px;">
                     <div style="margin-left: 500px; width: 610px;height: 335px;background-color: rgba(35, 35, 35, 1);margin-top: 170px ; padding-left: 41px; padding-top: 29px;">
                         <uL class="txt-1">01</uL>
@@ -77,10 +77,10 @@
                 </div>
             </div>
             <div style="width: 1920px;background-color: rgba(26, 26, 26, 1);height: 797px; padding-top: 157px;overflow: hidden;">
-                <ul class="test">Testimonial</ul>
+                <ul class="eeeeeee">Testimonial</ul>
                 <div style=" display: flex; gap: 20px; width: 1660px;height: 271px; margin-top: 69px;">
                     <div class="por">
-                        <ul class="lor">"Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Suspendisse varius enim in eros"</ul>
+                        <ul class="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Suspendisse varius enim in eros"</ul>
                         <div style="display: flex;">
                         <img src="img/Frame 56 (2).png" alt="">
                         <div >
@@ -89,7 +89,7 @@
                         </div>
                         </div>
                     </div>
-                    <div class="per">
+                    <div class="poteto">
                         <ul class="lor-1">"Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. <br>Suspendisse varius enim in eros"</ul>
                         <div style="display: flex;">
                         <img src="img/Frame 56 (1).png" alt="" style="margin-left: 32px;">
@@ -99,7 +99,7 @@
                         </div>
                         </div>
                     </div>
-                    <div class="per">
+                    <div class="teto">
                         <ul class="lor-1">"Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. <br>Suspendisse varius enim in eros"</ul>
                         <div style="display: flex;">
                         <img src="img/Frame 56 (1).png" alt="" style="margin-left: 32px;">
@@ -125,11 +125,11 @@
             <div class="end-last">
                 <ul class="yl-last">Let’s create<br>
                     something together</ul>
-                    <a href="" class="butt-3">Book a Call</a>
+                    <a href="" class="button3">Book a Call</a>
             </div>
     </main>
     <footer style="width: 1920px;height: 196px;background-color: rgba(35, 35, 35, 1); padding-top: 53px;">
-        <div style="display: flex;gap: 40px;justify-content: center;" class="div-3">
+        <div style="display: flex;gap: 40px;justify-content: center;" class="pos3">
         <ul>Instagram</ul>
         <ul>Behance</ul>
         <ul>Twitter</ul>
